test/spec_vectors/load64/fail/module_52.wat
(module (memory i64 0) (func $type-address-empty-in-call (call 1 (i32.load)) (drop)) (func (param i32) (result i32) (local.get 0)))